# qt-galgame-by-ai

./: .gitignore  BEFORECODING.md  CMakeLists.txt  README.md  galgame_config.json
examples/: scene.json
include/: CodingStandards.h  codingstyle.h
include/core/: Configuration.h  Execution.h  GameManager.h  Timer.h
include/factory/: Factory.h  NativeItemFactory.h  Registration.h
include/resources/: AudioResource.h  FormatSupport.h  JsonResource.h  Loader.h  MediaResource.h  QmlResource.h  Resource.h  Resources.h  TextureResource.h
include/scene/: AudioItem.h  CharacterItem.h  Item.h  PlayableItem.h  Scene.h  VideoItem.h
resources/: config.json  game.qml  game_constants.json  main.qml  mainmenu.qml  menu.qml  opening.qml  resources.qrc  scene.json  scene.qml
scripts/: install_qt6_deps_ubuntu.sh
src/: item.cpp  item.h  main.cpp  scene.cpp  scene.h
src/core/: Configuration.cpp  Execution.cpp  GameManager.cpp  Timer.cpp
src/factory/: NativeItemFactory.cpp  Registration.cpp
src/resources/: AudioResource.cpp  JsonResource.cpp  Loader.cpp  MediaResource.cpp  QmlResource.cpp  Resource.cpp  Resources.cpp  TextureResource.cpp
src/scene/: AudioItem.cpp  CharacterItem.cpp  Item.cpp  PlayableItem.cpp  Scene.cpp  VideoItem.cpp
